--- a/CSS-Coursework-Week2.css
+++ b/CSS-Coursework-Week2.css
@@ -1,6 +1,12 @@
+@keyframes colorchange {
+    from {background-color: rgb(13, 0, 255);}
+    to {background-color: rgb(0, 179, 255);}
+  }
+
+
 body {
-    background-color: rgb(3, 105, 39);
     color: rgb(204, 209, 247);
+    animation: colorchange 5s infinite;
   }
   
   h1 {
