--- a/CSS-Coursework-Week2.css
+++ b/CSS-Coursework-Week2.css
@@ -17,3 +17,11 @@ body {
     font-family: verdana;
     font-size: 20px;
   }
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
