--- a/CSS-Coursework-Week2.css
+++ b/CSS-Coursework-Week2.css
@@ -17,6 +17,13 @@ body {
     font-family: verdana;
     font-size: 20px;
   }
+  .navbar {
+    overflow: hidden;
+    background-color: rgb(1, 8, 89);
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+  
   .navbar a {
     float: left;
     font-size: 16px;
@@ -25,3 +32,12 @@ body {
     padding: 14px 16px;
     text-decoration: none;
   }
+  
+  header {
+    text-align: center; 
+    font-size: 22px;
+    font-weight: bold;
+    font-family: Lucida, Times New Roman;
+    color: #e6d2ff;
+  }
+  
